--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
     <!--الترويسة-->
     <header>
-        <img src="/src/logo.png" alt="شعار يوم التأسيس" class="logo">
+        <img src="src/logo.png" alt="شعار يوم التأسيس" class="logo">
         <div class="Tagline_div">
-            <img src="/src/Tagline.png" alt="شعار يوم التأسيس" class="Tagline">
+            <img src="src/Tagline.png" alt="شعار يوم بدينا" class="Tagline">
         </div>
     </header>
     <!--محتوى الصفحة-->
@@ -20,7 +20,7 @@
         <div class="video-player_size">
         <div class="video-player">
             <video id="video">
-                <source src="/src/video.mp4" type="video/mp4" />
+                <source src="src/video.mp4" type="video/mp4" />
             </video>
             <div class="controls">
                 <button class="sound-button control-button">
@@ -45,13 +45,13 @@
         <p>لم تكن البداية قريبة،
         بل تتجذر لزمنٍ ما قبل الإسلام، حيث قَدِم بنو حنيفة إلى اليمامة في مطلع القرن الخامس الميلادي، واستقروا في وسط الجزيرة العربية ليأسسوا اليمامة التي تمركزت في منطقة العارض في نجد؛ على ضفاف وادي حنيفة، لتصبح بعد ذلك جزءاً من الدولة النبوية عند ظهور الإسلام.
         وبعد انتهاء الخلافة الراشدة، تزعزع الاستقرار في الجزيرة العربية، وساد فيها الإهمال وعدم الاستقرار والضعف وهُجرت المنطقة وأصبحت في طي النسيان.</p>
-        <img src="/src/img1.webp" alt="صورة توضيحية" class="photo1" style="width: 400px; height: auto; padding: 0px; margin: 0px;">
+        <img src="src/img1.webp" alt="صورة توضيحية" class="photo1" style="width: 400px; height: auto; padding: 0px; margin: 0px;">
         <p>حتى عاد الأمير مانع بن ربيعة المريدي الحنفي، ليكمل مسيرة عشيرته "بني حنيفة"، وذلك في منتصف القرن التاسع الهجري، وتحديداً في عام 850م/1446م، حيث تمكّن الأمير من العودة إلى وسط الجزيرة العربية حيث كان أسلافه، وكان قدومه اللبنة الأولى في مراحل تأسيس الدولة السعودية الأولى التي ستبرز لاحقاً، عندما أسس مدينة الدرعية الثانية -والتي تكونت من غصيبة والمليبيد-، لتكون المدينة القابلة للتوسع وتحقيق الأمن والاستقرار، وهي مختلفة عن الدرعية التي كانوا يستقرون على أرضها بالقرب من القطيف شرق الجزيرة العربية.</p>
-        <img src="/src/img2.jpg" alt="صورة توضيحية" class="photo2" style="width: 400px; height: auto; padding: 0px; margin: 0px;">
+        <img src="src/img2.jpg" alt="صورة توضيحية" class="photo2" style="width: 400px; height: auto; padding: 0px; margin: 0px;">
         <p>وبعد أكثر من 280 عاماً تعاقب فيها أبناء مانع المريدي وأحفاده على إمارة الدرعية، تهيأت المنطقة لمرحلة جديدة وذلك عندما تولى الإمام محمد بن سعود الحكم في منتصف عام 1139هـ (فبراير 1727م) حيث نقل الدرعية من الضعف والانقسام، إلى توحيدها واستقلالها السياسي، ليؤسس الدولة السعودية الأولى، وعاصمتها الدرعية.</p>
-        <img src="/src/img3.jpg" alt="صورة توضيحية" class="photo3" style="width: 600px; height: auto; padding: 0px; margin: 0px;">
+        <img src="src/img3.jpg" alt="صورة توضيحية" class="photo3" style="width: 600px; height: auto; padding: 0px; margin: 0px;">
         <p>ولد الإمام محمد بن سعود بن محمد بن مقرن في الدرعية عام 1090ه (1679م) ونشأ وترعرع فيها، واكتسب خبرة من التجارب التي خاضها حينما عمل إلى جانب والده وجده أثناء توليهم الأمارة، مما أكسبه خبرة في الحكم، ومعرفة بأوضاع الدرعية، وبفضل عزمه ورؤيته، ومعرفته بأحوال المنطقة، فقد تمكن من تحقيق طموحه، وتجسيد عزمه ليتشكل في دولةٍ مستقرة، ومزدهرة.</p>
-        <img src="/src/img4.jpg" alt="صورة توضيحية" class="photo4" style="width: 500px; height: auto; padding: 0px; margin: 0px;">
+        <img src="src/img4.jpg" alt="صورة توضيحية" class="photo4" style="width: 500px; height: auto; padding: 0px; margin: 0px;">
         <p>عندما تولى الإمام محمد بن سعود الحكم، عمل على تأسيس الوحدة فيها وتأمين الاستقرار والأمن داخلها وفي محيطها من البلدات والقبائل وحماية طرق الحج والتجارة. ونظّم الأوضاع الاقتصادية للدولة، وتوسّع في بناء وتنظيم أسوار الدرعية. وانطلقت بعدها الدولة بتوحيد المناطق في وسط الجزيرة العربية؛ لتشكل بداية المرحلة الأولى من توحيد الدولة السعودية الأولى الذي اكتمل في عهد أبنائه وأحفاده.</p>
     </div>
     <!--التذليل-->
