--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <!--التذليل-->
     <footer>
         <div class="name_div">
-            <h6 class="name">إعداد طلاب مجموعة براء<h6>
+            <h6 class="name">إعداد الطالب: عبدالله باعامر<h6>
             <h6 class="class">الصف: أولى / ١١ (موهبة)</h6>
         </div>
     </footer>
